--- a/styles/main.css
+++ b/styles/main.css
@@ -54,15 +54,17 @@ body {
 
 .first-line {
     padding-top:20px ;
-    margin:0 0 0 10%;
+    /* margin:0 0 0 10%; */
     animation-name: from-left, race-in;
     animation-duration: 2s;
     font-size: 30px;
-    font-weight: 300;
+    font-weight:600;
     padding-bottom:6px;
     border-bottom-style: solid;
     border-bottom-width: 3px;
     width:fit-content;
+
+    margin-left:15%;
 }
 
 .wave {
@@ -76,22 +78,41 @@ body {
 .second-line {
     /* padding: 10px 0 30px 0; */
     margin-top: 0;
-    font-size: 500%;
+    font-size: 15em;
     animation-name: wave-hand;
     animation-duration: 2s;
     animation-iteration-count: 2;
     font-family: 'Permanent Marker', cursive;
+    padding-top: 20px;
+    padding-left: 10px;
+
+    margin-left:12%;
+}
+
+.about-me p {
+    padding-top: 0;
+    color: #ffffff;
+    padding: 5%;
+    line-height: 45px;
+
+    margin-left:5%;
 }
 
 p{
-    padding: 40px;
-    font-size: 1.5rem;
+    padding: 40px 40px 10px 40px;
+    font-size: 2rem;
+    font-weight:700;
+    border-bottom-style: solid;
+    border-bottom-width: 3px;
+    width: fit-content;
+    margin: auto;
 }
 
 
 .about-me {
     /* position: absolute; */
-    width: 100%;
+    /* width: 100%; */
+    height: 100vh;
     /* height: inherit; */
     left:0;
     /* background: #6d42c7; */
@@ -100,22 +121,34 @@ p{
     color: white;
     text-align: center;
     justify-content: center;
-    padding-bottom: 5%;;
-   
+    padding: 5%;;
+    
+    
+    display: grid;
+    gap: 10px;
+    grid-template-columns: auto 60%;
+    grid-template-rows: auto auto ;
 }
 
 img {
     border-radius: 38% 62% 70% 30% / 30% 30% 70% 70% ;
-    width: 60%;
+    width: 100%;
     transform: rotate(-20deg);
+    padding-bottom: 10px;
 }
 
 .background-img {
     border-radius: 38% 62% 70% 30% / 30% 30% 70% 70% ;
-    background-color: aqua;
-    width: 60%;
+    background: rgb(2,0,36);
+    background: linear-gradient(90deg, rgba(2,0,36,1) 7%, rgba(0,123,255,1) 100%);
+    width: 70%;
     margin: auto;
     transform: rotate(20deg);
+
+    padding:5px;
+    height: auto;
+    grid-column: 2;
+    grid-row: 1/3;
 }
 
 
@@ -129,6 +162,8 @@ img {
     background-image: url('/unit-02-html-css-assessment-suzi01/coding-girl.jpg');
     background-size: cover;
     height:100vh;
+    justify-content: center;
+
 }
 
 
@@ -200,6 +235,14 @@ li {
     width: auto;
 
   }
+
+
+  .timeline-header {
+    text-align: center;
+    font-weight: 900;
+    font-size: 4rem;
+    color:#ffffff;
+  }
  
   .timeline-items {
     max-width:1000px;
@@ -208,6 +251,7 @@ li {
     display: flex;
     flex-wrap: wrap;
     position:relative;
+    
   }
  
   .timeline-items::before {
@@ -216,6 +260,7 @@ li {
     width:2px;
     height:100%;
     background-color: #2f363e;
+    border: solid 1px #32cd32;
     left:calc(50% - 1px);
   }
  
@@ -224,6 +269,7 @@ li {
     /* margin-bottom:40px; */
     width: 100%;
     position: relative;
+    
   }
  
   .timeline-items:last-child {
@@ -260,6 +306,7 @@ li {
     background-color: #2f363e;
     padding: 20px;
     border-radius:5px;
+    border: solid 2px #32cd32;
   }
  
   .timeline-content h3 {
@@ -347,11 +394,12 @@ a:-webkit-any-link {
     }
 
     body{
-        /* height: 100vh; */
+        width: 100vh;
+        /* overflow: hidden; */
     }
 
     .sec-skew {
-        width: 100%;
+        /* width: 100%; */
         /* display: flex; */
         /* padding: 20%; */
         position: relative;
@@ -360,7 +408,8 @@ a:-webkit-any-link {
         background-size:cover;
         pointer-events: none;
         /* justify-content: center; */
-        padding: 50px 0;
+        padding-top: 50px;
+        
     }
 
     .second-line {
@@ -378,12 +427,26 @@ a:-webkit-any-link {
         display: flex;
         flex-direction: column;
         position: relative;
-        width: 100%;
-        /* height: auto; */
+        width: auto;
+        /* width: auto; */
+    }
+
+    .second-line{
+        font-size: 6rem;
+        margin: 0;
+    }
+
+    .about-me p{
+        font-size: large;
+        /* padding-bottom: 2%; */
+    }
+
+    .background-img{
+        margin-top: 5%;
     }
 
     .sec-container{
-        width: 80%;
+        width: 90%;
         align-content: left;
         padding-top: 20px;
         margin: auto;
@@ -397,7 +460,7 @@ a:-webkit-any-link {
         /* bottom: 0; */
         /* flex-direction: column; */
         /* min-height: 100%; */
-        width: 100%;
+        /* width: 100%; */
         /* margin-top: 256%; */
         /* width: 100%; */
         /* top:271%; */
