--- a/styles/main.css
+++ b/styles/main.css
@@ -1,7 +1,8 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Permanent+Marker&family=Poppins:wght@300;600;900&family=Roboto:wght@400;500;900&display=swap');
+@import url('keyframes.css');
 
-@keyframes from-left{
+/* @keyframes from-left{
     0% {margin:0 0 0 -50%;}
     100% {margin:0 0 0 10%;}
 }
@@ -27,7 +28,7 @@
     50% {transform: rotate(10.0deg)}
     60% {transform: rotate(0.0deg)}
     100% {transform: rotate(0.0deg)}
-}
+} */
 
 section {
     height:auto;
@@ -116,7 +117,7 @@ p{
     /* height: inherit; */
     left:0;
     /* background: #6d42c7; */
-    background-image: url("/unit-02-html-css-assessment-suzi01/mountains.jpg");
+    background-image: url("/mountains.jpg");
     background-size: cover;
     color: white;
     text-align: center;
@@ -159,7 +160,7 @@ img {
     /* height: 8%; */
     /* right:0; */
     /* height: auto; */
-    background-image: url('/unit-02-html-css-assessment-suzi01/coding-girl.jpg');
+    background-image: url('/coding-girl.jpg');
     background-size: cover;
     height:100vh;
     justify-content: center;
@@ -368,7 +369,7 @@ a:-webkit-any-link {
         /* display: flex; */
         /* padding: 20%; */
         position: relative;
-        background-image: url('/unit-02-html-css-assessment-suzi01/desk.jpg');
+        background-image: url('/desk.jpg');
         /* background-repeat: no-repeat; */
         background-size:cover;
         pointer-events: none;
