--- a/styles/main.css
+++ b/styles/main.css
@@ -1,6 +1,6 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Permanent+Marker&family=Poppins:wght@300;600;900&family=Roboto:wght@400;500;900&display=swap');
-@import url('keyframes.css');
+/* @import url('keyframes.css'); */
 
 /* @keyframes from-left{
     0% {margin:0 0 0 -50%;}
@@ -32,7 +32,7 @@
 
 section {
     height:auto;
-    background-color: red;
+    background-color: lightblue;
     border: solid 1px black;
 }
 
