--- a/styles/main.css
+++ b/styles/main.css
@@ -117,7 +117,7 @@ p{
     /* height: inherit; */
     left:0;
     /* background: #6d42c7; */
-    background-image: url("/mountains.jpg");
+    background-image: url('/images/mountains.jpg');
     background-size: cover;
     color: white;
     text-align: center;
@@ -160,7 +160,7 @@ img {
     /* height: 8%; */
     /* right:0; */
     /* height: auto; */
-    background-image: url('/coding-girl.jpg');
+    background-image: url('/images/coding-girl.jpg');
     background-size: cover;
     height:100vh;
     justify-content: center;
@@ -369,7 +369,7 @@ a:-webkit-any-link {
         /* display: flex; */
         /* padding: 20%; */
         position: relative;
-        background-image: url('/desk.jpg');
+        background-image: url('/images/desk.jpg');
         /* background-repeat: no-repeat; */
         background-size:cover;
         pointer-events: none;
