Keyframe comments completely deleted and import for keyframes  uncommented

--- a/styles/main.css
+++ b/styles/main.css
@@ -1,34 +1,7 @@
-
 @import url('https://fonts.googleapis.com/css2?family=Permanent+Marker&family=Poppins:wght@300;600;900&family=Roboto:wght@400;500;900&display=swap');
-/* @import url('keyframes.css'); */
-
-/* @keyframes from-left{
-    0% {margin:0 0 0 -50%;}
-    100% {margin:0 0 0 10%;}
-}
-
-@keyframes size-up{
-    from {font-size: small;}
-    to {font-size: large;}
-}
+@import url('keyframes.css');
 
 
-@keyframes race-in{
-    0% {transform: rotate(0.0deg)}
-    50% {transform: rotate(14.0deg)}
-    100% {transform: rotate(0.0deg)}
-}
-
-@keyframes wave-hand{
-    0% {transform: rotate(0.0deg)}
-    10% {transform: rotate(14.0deg)}
-    20% {transform: rotate(-8.0deg)}
-    30% {transform: rotate(14.0deg)}
-    40% {transform: rotate(-4.0deg)}
-    50% {transform: rotate(10.0deg)}
-    60% {transform: rotate(0.0deg)}
-    100% {transform: rotate(0.0deg)}
-} */
 
 section {
     height:auto;
